--- a/pom.xml
+++ b/pom.xml
@@ -17,21 +17,21 @@
 
 
 	<dependencies>
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.1.0</version>
-    <scope>compile</scope>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.1.0</version>
+		    <scope>compile</scope>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>3.141.59</version>
+		</dependency>
 
 		
 		<dependency>
@@ -66,6 +66,24 @@
 			<artifactId>cucumber-reporting</artifactId>
 			<version>3.8.0</version>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
+		<dependency>
+		    <groupId>info.cukes</groupId>
+		    <artifactId>cucumber-picocontainer</artifactId>
+		    <version>1.2.5</version>
+		    <type>pom</type>
+		    <scope>test</scope>
+		</dependency>
+
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core 
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.13.3</version>
+		</dependency>  -->
 	 	
 	</dependencies>
 	
@@ -83,7 +101,7 @@
 				<configuration>			
 					<source>1.8</source>
 					<target>1.8</target>					
-				</configuration>
+				</configuration>  
 			</plugin>
 			
 			<plugin>
