pom.xml committed on Aug 3rd 12:18AM in gunalocal

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-<!-- updated in gunaLocal through gitHub console 
-On Aug 2nd 5:36 Pm updated in master through github
+<!-- 
+On Aug 3rd 12:13am updated in gunalocal eclipse
 
 
 -->
