--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 	</properties>
 
 <!-- 
-On Aug 3rd 12:13am updated in gunalocal eclipse
-
+On Aug 3rd 12:13am updated in eclipse gunalocal
+On Aug 3rd 10:32am updated in master github
 
 -->
 
