updating pom.xml from eclipse gunalocal

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 <!-- 
 On Aug 3rd 12:13am updated in eclipse gunalocal
-On Aug 3rd 10:32am updated in master github
+On Aug 3rd 11:09am updated in github master
 
 -->
 
